# ChiralNP

./: pyproject.toml  test.py
src/ChiralNP/: chirality.py  crystal.py  nanoparticle.py  point_in_mesh.py  shapes.py  test.py
src/ChiralNP_STEFANELLI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
