[project]
name = "ChiralNP_STEFANELLI"
version = "0.0.1"
authors = [
  { name="Leonardo Stefanelli", email="leostefa002@gmail.com" },
]
description = "Package for chiral NP"
# readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
# license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
